# mercator

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  go.mod  go.sum  mise.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  proof_point.yml  question.yml
.github/workflows/: ci.yml  lab-campaigns.yml  release.yml
cmd/mercator/: docker_offer_test.go  lab.go  lab_files.go  lab_files_test.go  main.go  main_test.go  manifests_test.go  reconcile_test.go
cmd/mercator-conformance-probe/: main.go
cmd/mercator-node/: main.go
conformance/: Dockerfile
docs/: dependency-supply-chain-policy.md
docs/adr/: 0001-env-api-no-secret-vault.md  0002-connection-credentials-are-first-class.md  0003-reposition-as-warm-fleet-broker.md  0004-mercator-lab-deterministic-executable-specification.md  0005-capacity-and-execution-are-separate-contracts.md
docs/assets/: README.md  mercator-demo.tape  mercator-demo.webm  record-demo.mjs
docs/launch/: github-repository-settings.md  open-source-readiness.md  pre-public-exposure-review.md  proof-point-template.md  (+3 more)
scripts/: build-release-archives.sh  check-open-source-launch.sh  generate-api-contracts.sh  qualify-release-upgrade.sh  smoke-test-fake.sh
sdk/python/: README.md  pyproject.toml
sdk/python/src/mercator/: __init__.py  client.py  reporter.py
sdk/python/tests/: test_client.py  test_reporter.py
web/: web.go
(+635 files in other folders)
