[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "mercator-sdk"
version = "0.1.0"
description = "Python SDK for the Mercator V1 HTTP API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mercator Contributors" }]
keywords = ["mercator", "oci", "run-broker"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/bengarcia/mercator"

[tool.hatch.build.targets.wheel]
packages = ["src/mercator"]

[tool.hatch.build.targets.sdist]
include = [
  "src/mercator",
  "tests",
  "README.md",
  "pyproject.toml",
]
